# leontine2

./: Cargo.toml  Dioxus.toml  README.md  prompt.txt
assets/: api-status.css  main.css
src/: main.rs  state.rs
src/api/: mod.rs
src/components/: mod.rs
src/components/api_status/: mod.rs
src/components/settings/: mod.rs
src/components/transcription/: mod.rs
src/config/: mod.rs
src/hooks/: mod.rs  persistent.rs
