[package]
name = "leontine2"
version = "0.1.0"
authors = ["Jérôme Bousquié <jerome.bousquie@iut-rodez.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }
log = "0.4"
web-sys = "0.3"
gloo = "0.11.0"
gloo-storage = "0.3.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
