[package]
name = "leontine2"
version = "0.1.0"
authors = ["Jérôme Bousquié <jerome.bousquie@iut-rodez.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["web"] }
log = "0.4"
web-sys = "0.3"
gloo = "0.11.0"
gloo-storage = "0.3.0"
gloo-net = "0.6.0"
gloo-file = "0.3.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
wasm-logger = "0.2.0"
futures-util = "0.3"
wasm-bindgen-futures = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
